# Maldact

./: .gitignore  LICENSE  README.md  conda_build_config.yaml  event_bus.py  main.py  meta.yaml  pytest.ini  requirements.txt  setup.cfg  setup.py  signal_manager.py  state_enums.py  ui_manager.py  widgets.py
backend/: Learn_network.py  Learn_networkk.py  Network.py  async_context_manager.py  async_workers.py  learn_network.py  ml_managers.py  network.py  training_manager.py
backend/data_parsing/: milesovka_lightning_bin.py
backend/data_parsing/time_series/: sliding_window_sampler.py
build_scripts/: generate_requirements.py  update_meta_yml.py  update_setup_cfg.py
src/maldact/: event_bus.py  main.py  signal_manager.py  ui_manager.py
src/maldact/backend/: async_workers.py  ml_managers.py  network.py
src/maldact/backend/client/: client_main.py  client_manager.py
src/maldact/backend/server/: server_main.py  server_manager.py  workers.py
src/maldact/config/: config_server.yaml
src/maldact/ui/: default_widget.py  info_widgets.py  input_widgets.py  main_window.py  popups.py  ui_builder.py
tests/test_backend/: test_learn_network.py
tests/test_data/training/: noise_128_2.npy  noise_128_8.npy  noise_2_2.npy  noise_2_31.npy  noise_8_2.npy
ui/: default_widget.py  info_widgets.py  input_widgets.py  main_window.py  main_window_elements.py  popups.py  ui_builder.py  ui_switching.py  ui_tools.py  widgets.py
