[metadata]
name = Maldact
version = 0.1.0
author = Vavrinec Kavan
author_email = vavrinec.kavan@gmail.com
description = Machine learning data classification tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wision-ware/Maldact
project_urls =
    Bug Tracker = https://github.com/wision-ware/Maldact/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    requests

[options.extras_require]
dev =
    pytest
    black

[options.package_data]
* = *.txt, *.rst
my_package = example/*.dat

[options.entry_points]
console_scripts =
    my_command = my_project.module:function