
[metadata]
name = maldact
version = 0.1.0
author = Vavrinec Kavan
author_email = vavrinec.kavan@gmail.com
description = Machine learning data classification tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wision-ware/Maldact
project_urls =
    Bug Tracker = https://github.com/wision-ware/Maldact/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =


[options.extras_require]
dev =
    pytest
    black
    

[options.entry_points]
console_scripts =
    maldact = maldact.main:main

[options.packages.find]
where = src